# meridian-reporter

./: .env.example  .gitignore  .vercelignore  README.md  config.json  input.design_tokens.json  input.enriched.json  pyproject.toml  slides.html  vercel.json
meridian/: art_director.py  config.py  insights.py  openrouter.py  pipeline.py  placeholders.py  render.py  screenshots.py  slide_critic.py  slide_loop.py  slides.py
prompts/art_director/: response.schema.json  system.md  user.md
prompts/insight_hunter/: response.schema.json  system.md  user.md
prompts/shared/: narrative_tags.md  plot_recipes.md
prompts/slide_critic/: response.schema.json  system.md  user.md
prompts/slide_designer/: response.schema.json  system.md  user.md
renderer/: data_refs.js  slides.css  slides_boot.js  slides_primitives.js
